--- a/index.html
+++ b/index.html
@@ -1,20 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
-    <style></style>
-</head>
-<body>
-    <header></header>
-    <aside></aside>
+    <style>
+      :root {
+        --colorWhite: #fff;
+        --colorBlack: #000;
+        --colorMainRed: #ed1c24;
+        --colorNavGray: #333333;
+        --fontText: "Open Sans", sans-serif;
+        --fontRoboto: "Roboto Condensed", sans-serif;
+        --paddingWrap: calc((100% - 1200px) / 2);
+      }
+      .page-logo {
+        background: var(--colorMainRed);
+        height: 95px;
+        min-width: 100vw;
+        animation: logoGrow 0.5s;
+        padding-left: var(--paddingWrap);
+        padding-right: var(--paddingWrap);
+      }
+
+      .page-logo .main-logo {
+        position: relative;
+        top: 50%;
+        transform: translateY(-50%);
+        width: 250px;
+      }
+
+      .navigation {
+        background-color: var(--colorNavGray);
+        padding-left: var(--paddingWrap);
+        padding-right: var(--paddingWrap);
+      }
+
+      .navigation .navigation__links {
+        margin: 0;
+        list-style-type: none;
+        display: flex;
+        padding: 14px 0;
+      }
+
+      .navigation .navigation__link {
+        color: var(--colorWhite);
+        font-weight: 700;
+        text-decoration: none;
+        margin: 0 10px;
+        font-size: 16px;
+        font-weight: 600;
+        letter-spacing: 0;
+        padding: 5px 0;
+      }
+    </style>
+  </head>
+  <body>
+    <header>
+      <div class="page-logo">
+        <a href="#">
+          <img
+            class="img-fluid main-logo"
+            src="https://cdn-3.expansion.mx/4d/74/ff21633645fd835ffef7f00b46c7/logo-exp-1.svg"
+            alt="Expansion"
+          />
+        </a>
+      </div>
+      <nav class="navigation">
+        <ul class="navigation__links">
+          <li><a class="navigation__link" href="#">Últimas Noticias</a></li>
+          <li><a class="navigation__link" href="#">Empresas</a></li>
+          <li><a class="navigation__link" href="#">Economía</a></li>
+          <li><a class="navigation__link" href="#">Tecnología</a></li>
+          <li><a class="navigation__link" href="#">Política</a></li>
+          <li><a class="navigation__link" href="#">Mujeres</a></li>
+          <li><a class="navigation__link" href="#">Internacional</a></li>
+          <li><a class="navigation__link" href="#">Opinión</a></li>
+          <li><a class="navigation__link" href="#">Life and Style</a></li>
+          <li><a class="navigation__link" href="#">Obras</a></li>
+          <li><a class="navigation__link" href="#">Más</a></li>
+        </ul>
+      </nav>
+    </header>
     <main>
-        <article>
-            <p></p>
-        </article>
+      <article>
+        <p></p>
+      </article>
     </main>
-</body>
-<script></script>
+    <aside></aside>
+  </body>
+  <script></script>
 </html>
