--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
       crossorigin="anonymous"
     />
-    <title>Document</title>
+    <title>HTML Article</title>
     <style>
       :root {
         --colorWhite: #fff;
@@ -60,6 +60,12 @@
         letter-spacing: 0;
         padding: 5px 0;
       }
+
+      .ad-superior-1 {
+        border: 1px solid var(--colorBlack);
+        margin: 0 auto;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
@@ -90,6 +96,15 @@
       </nav>
     </header>
     <main>
+      <aside>
+        <div class="ad-superior-1">
+          <img
+            class="img-fluid"
+            src="https://www.adspeed.com/placeholder-728x270-Test.gif"
+            alt=""
+          />
+        </div>
+      </aside>
       <article>
         <p></p>
       </article>
