--- a/index.html
+++ b/index.html
@@ -85,6 +85,15 @@
         margin: 40px 0;
       }
 
+      .ad-side-2 {
+        display: inline-block;
+        margin: 20px 0 40px;
+        vertical-align: top;
+        position: sticky;
+        top: 56px;
+        padding: 0;
+      }
+
       .BlocksPage-main {
         border: 1px solid var(--colorBlack);
         box-sizing: border-box;
@@ -123,6 +132,10 @@
         margin-bottom: 10px;
       }
 
+      .Magazine-promo {
+        margin: 20px 0 40px;
+      }
+
       .MagazinePromo-media {
         margin-bottom: 10px;
         position: relative;
@@ -154,6 +167,64 @@
 
       .blocks {
         border: 1px solid var(--colorMainRed);
+      }
+
+      .widgetMC {
+        padding: 16px;
+        max-width: 640px;
+        margin: 20px auto 40px;
+        background: #ededed;
+        border-radius: 8px;
+      }
+
+      .widgetMC h3 {
+        font-family: Inter, sans-serif;
+        font-weight: 700;
+        font-size: 2rem;
+        line-height: 1.2857em;
+        font-size: 1.3rem;
+        margin-top: 0;
+        margin-bottom: 10px;
+      }
+
+      .widget-description {
+        color: #555;
+        font-weight: 700;
+        text-align: center;
+        line-height: 1.3;
+        margin: 0px 4px 25px;
+        font-size: 15px;
+      }
+
+      .widgetMC [name="submitButton"] {
+        background-color: #ed1c24;
+        color: #ffffff;
+        border: 0;
+        border-radius: 24px;
+        font-weight: 600;
+        font-size: 14px;
+        line-height: 20px;
+        padding: 8px 24px;
+        text-transform: none;
+        transition: 0.3s all;
+        width: 100%;
+      }
+
+      .widgetMC input {
+        background-color: #fff;
+        font-size: 1rem;
+        line-height: 20px;
+        width: 100%;
+        outline: 0;
+        border-radius: 8px;
+        padding: 8px 12px;
+        border: 1px solid #c4c8cd;
+        margin-bottom: 16px;
+      }
+
+      .GoogleAd {
+        margin: 20px auto 40px;
+        text-align: center;
       }
 
       @media only screen and (min-width: 1024px) {
@@ -310,28 +381,137 @@
                 </figcaption>
               </figure>
             </div>
-            <section class="blocks">
-              <div class="first-block">
+            <div class="BlocksArticle">
+              <section class="blocks" id="block-0">
+                <div class="block">
+                  <p>
+                    El presidente ejecutivo de Tesla, <b>Elon Musk</b>, dijo el
+                    miércoles que el fabricante de vehículos eléctricos
+                    <b
+                      >estaba dudando sobre sus planes de instalar una fábrica
+                      en México</b
+                    >
+                    mientras evalúa las perspectivas económicas, al tiempo que
+                    advirtió por el efecto de las <b>altas tasas de interés</b>.
+                  </p>
+                  <p>
+                    Después de que la compañía incumplió las expectativas de
+                    Wall Street sobre el margen bruto de ganancias, beneficios e
+                    ingresos del tercer trimestre, Musk dijo que quería tener
+                    una mejor idea de hacia dónde se dirigía la economía antes
+                    de ir "a toda máquina" con la construcción de una planta en
+                    el norte de México.
+                  </p>
+                </div>
+                <div class="GoogleAd">
+                  <img
+                    class="img-fluid"
+                    src="https://www.adspeed.com/placeholder-300x250-Test.gif"
+                    alt=""
+                  />
+                </div>
+              </section>
+              <section class="blocks" id="block-1">
+                <div class="block">
+                  <p>
+                    Después de que la compañía incumplió las expectativas de
+                    Wall Street sobre el margen bruto de ganancias, beneficios e
+                    ingresos del tercer trimestre, Musk dijo que quería tener
+                    una mejor idea de hacia dónde se dirigía la economía antes
+                    de ir "a toda máquina" con la construcción de una planta en
+                    el norte de México.
+                  </p>
+                  <p>
+                    "Si las tasas de interés siguen altas... es mucho más
+                    difícil para la gente comprar un auto. Simplemente no pueden
+                    permitírselo", dijo en una conferencia telefónica con
+                    analistas.
+                  </p>
+                  <p>
+                    Actualmente, las tasa de interés de referencia del Banco de
+                    México (Banxico) se encuentra en un nivel máximo histórico
+                    de 11.25%, y la entidad ha dicho que la mantendría en ese
+                    nivel por un tiempo prolongado.
+                  </p>
+                </div>
+                <div class="GoogleAd">
+                  <img
+                    class="img-fluid"
+                    src="https://www.adspeed.com/placeholder-300x250-Test.gif"
+                    alt=""
+                  />
+                </div>
+              </section>
+              <section class="blocks" id="block-2">
+                <div class="block">
+                  <p>
+                    La tasa de Banxico es una de las referencias que existen
+                    para el otorgamiento de financiamientos de las instituciones
+                    de crédito.
+                  </p>
+                  <p>
+                    Tesla anunció en marzo que construiría una gran planta en el
+                    estado Nuevo León, fronterizo con Estados Unidos y donde ya
+                    tiene proveedores, en lo que funcionarios mexicanos han
+                    descrito como una inversión de más de 5,000 millones de
+                    dólares, si bien la compañía no ha revelado el costo de
+                    capital asignado.
+                  </p>
+                  <p>
+                    Hasta el momento, Tesla ha logrado mantener la demanda con
+                    una serie de recortes de precios, pero Musk pasó gran parte
+                    de la llamada expresando preocupaciones sobre una mayor
+                    expansión, diciendo que temía que el aumento de las tasas de
+                    interés hiciera que los autos fueran menos accesibles.
+                  </p>
+                  <div class="GoogleAd">
+                    <img
+                      class="img-fluid"
+                      src="https://www.adspeed.com/placeholder-300x250-Test.gif"
+                      alt=""
+                    />
+                  </div>
+                </div>
+              </section>
+              <section class="blocks" id="block-3">
                 <p>
-                  El presidente ejecutivo de Tesla, <b>Elon Musk</b>, dijo el
-                  miércoles que el fabricante de vehículos eléctricos
-                  <b
-                    >estaba dudando sobre sus planes de instalar una fábrica en
-                    México</b
-                  >
-                  mientras evalúa las perspectivas económicas, al tiempo que
-                  advirtió por el efecto de las <b>altas tasas de interés</b>.
+                  El precio del popular SUV Modelo Y se mantuvo "casi sin
+                  cambios" para los consumidores incluso después de los recortes
+                  de precios de Tesla, dijo Musk, lo que explica los mayores
+                  costos de financiamiento
                 </p>
                 <p>
-                  Después de que la compañía incumplió las expectativas de Wall
-                  Street sobre el margen bruto de ganancias, beneficios e
-                  ingresos del tercer trimestre, Musk dijo que quería tener una
-                  mejor idea de hacia dónde se dirigía la economía antes de ir
-                  "a toda máquina" con la construcción de una planta en el norte
-                  de México.
+                  Al ser presionado para que entregase más detalles sobre la
+                  fábrica en México, Musk dijo: "Estoy marcado por el año 2009,
+                  cuando General Motors y Chrysler quebraron. No quiero ir a
+                  toda velocidad hacia la incertidumbre".
                 </p>
+                <p>
+                  El ejecutivo también dijo que habría "enormes desafíos" para
+                  alcanzar el volumen de producción de la camioneta Cybertruck
+                  de Tesla, retrasada durante mucho tiempo, y lograr que su
+                  flujo de caja sea positivo.
+                </p>
+                <p><i>Con información de Reuters</i></p>
+              </section>
+            </div>
+            <div class="BlocksPage-tags">
+              <h2 class="BlocksPage-tags-heading">Tags</h2>
+              <div class="BlocksPage-tags-body">
+                <a class="Link" href="https://expansion.mx/tesla-en-mexico"
+                  >Tesla en México</a
+                >
+                <a class="Link" href="https://expansion.mx/tag/empresas-tesla"
+                  >Tesla</a
+                >
+                <a class="Link" href="https://expansion.mx/tag/tasas-de-interes"
+                  >Tasas de interés</a
+                >
+                <a class="Link" href="https://expansion.mx/tag/banco-de-mexico"
+                  >Banco de México</a
+                >
               </div>
-            </section>
+            </div>
           </div>
           <aside class="BlocksPage-aside">
             <div class="ad-side-1">
@@ -356,6 +536,34 @@
                   Los 100 empresarios más importantes de México
                 </h3>
               </div>
+            </div>
+            <div class="widgetMC">
+              <h3>Newsletter</h3>
+              <form action="#">
+                <div class="widget-description">
+                  Únete a nuestra comunidad. Te mandaremos una selección de
+                  nuestras historias.
+                </div>
+                <input
+                  type="text"
+                  placeholder="Tu correo electrónico"
+                  id="idEmailForm1Sidebar"
+                  name="Email"
+                />
+                <input
+                  type="button"
+                  id="submitButtonXSidebar"
+                  name="submitButton"
+                  value="Suscribete"
+                />
+              </form>
+            </div>
+            <div class="ad-side-2">
+              <img
+                class="img-fluid"
+                src="https://www.adspeed.com/placeholder-306x600-Test.gif"
+                alt=""
+              />
             </div>
           </aside>
         </div>
