--- a/index.html
+++ b/index.html
@@ -569,6 +569,7 @@
         </div>
       </article>
     </main>
+    <footer style="height: 500px; background-color: #ededed; font-size: 2rem; text-align: center; margin-top: 40px;">Footer</footer>
   </body>
   <script></script>
 </html>
